# tail_stock

./: .gitignore  STRATEGY.md  start_backend.bat  start_frontend.bat
article_tail_strategy/: .gitignore  verify_late_signal.py  verify_result.txt
article_tail_strategy/backend/: pyproject.toml  run_server.py
article_tail_strategy/backend/app/: config.py  main.py  models.py
article_tail_strategy/backend/app/api/: routes.py
article_tail_strategy/backend/app/services/: backtest.py  data.py  optimization_records.py  optimizer.py  records.py  strategy.py
article_tail_strategy/backend/storage/backtest_records/: 20260427-160728-6402db9d.json  20260427-161936-b4ac9dd2.json  20260427-162823-c91b482d.json  20260427-163616-82aeb0c7.json  20260427-164940-82ca9687.json  20260427-165607-235f3a0b.json  20260427-173202-6c9a7f42.json  20260427-173438-3fd3f7c8.json  20260427-175029-8a6bc421.json  20260427-175107-6fde810b.json  20260427-175338-594724c6.json  20260430-102229-14609732.json  20260430-105939-393c812e.json
article_tail_strategy/backend/tests/: test_api.py  test_optimization_records.py  test_optimizer.py  test_records.py  test_strategy.py
article_tail_strategy/desktop/: README.md  main.cjs  (+2 more)
backend/: .env.example  pyproject.toml
backend/app/: main.py
backend/app/api/v1/: backtest.py  chart.py  data.py  portfolio.py
backend/app/core/: config.py  database.py
backend/app/models/: schemas.py
backend/app/services/: backtester.py  data_fetcher.py  strategy.py
backend/tests/: test_strategy.py
frontend/: package-lock.json  package.json  vite.config.ts
(+27 files in other folders)
